# ChangeLog for media-libs/freeverb3
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/freeverb3/ChangeLog,v 1.30 2011/09/19 13:19:03 sping Exp $

*freeverb3-2.5.20 (19 Sep 2011)

  19 Sep 2011; Sebastian Pipping <sping@gentoo.org> +freeverb3-2.5.20.ebuild:
  Bump to 2.5.20

*freeverb3-2.5.19 (18 Sep 2011)

  18 Sep 2011; Sebastian Pipping <sping@gentoo.org> +freeverb3-2.5.19.ebuild:
  Bump to 2.5.19

*freeverb3-2.5.18 (12 Sep 2011)

  12 Sep 2011; Sebastian Pipping <sping@gentoo.org> +freeverb3-2.5.18.ebuild,
  metadata.xml:
  Bump to 2.5.18: Add use flag avx, delete .la files of Audacious plug-ins

*freeverb3-2.5.17 (29 Aug 2011)

  29 Aug 2011; Sebastian Pipping <sping@gentoo.org> freeverb3-2.5.16.ebuild,
  +freeverb3-2.5.17.ebuild:
  Bump to 2.5.17, update dependency on Audacious

*freeverb3-2.5.16 (20 Jun 2011)

  20 Jun 2011; Sebastian Pipping <sping@gentoo.org> freeverb3-2.5.6.ebuild,
  freeverb3-2.5.8.ebuild, freeverb3-2.5.10.ebuild, freeverb3-2.5.12.ebuild,
  freeverb3-2.5.13-r2.ebuild, freeverb3-2.5.14.1.ebuild,
  +freeverb3-2.5.16.ebuild:
  Bump to 2.5.16, update dependency on Audacious

*freeverb3-2.5.14.1 (09 Jan 2011)

  09 Jan 2011; Sebastian Pipping <sping@gentoo.org> +freeverb3-2.5.14.1.ebuild:
  Trivial bump to 2.5.14.1

  29 Dec 2010; Sebastian Pipping <sping@gentoo.org> -freeverb3-2.3.0.ebuild,
  -freeverb3-2.3.1.ebuild, -freeverb3-2.4.0_rc2.ebuild,
  -freeverb3-2.5.0.ebuild, -freeverb3-2.5.1.ebuild, -freeverb3-2.5.2.ebuild,
  -freeverb3-2.5.4.ebuild, -freeverb3-2.5.5.ebuild, -freeverb3-2.5.13.ebuild,
  -freeverb3-2.5.13-r1.ebuild:
  Remove ebuilds dependending on unsupported versions of Audacious (bug
  #348171). Also remove revisions of 2.5.13 below r2 while we're at removing.

  29 Dec 2010; Markos Chandras <hwoarang@gentoo.org>
  freeverb3-2.5.13-r2.ebuild:
  Stable on amd64 wrt bug #348264
