@@ -15,6 +15,7 @@ DIST freeverb3-2.5.17.tar.gz 6176324 RMD160 076b72c03aabd02283dd7c564cec4706258d
 DIST freeverb3-2.5.18.tar.gz 6180224 RMD160 9bee665f01fa3e723d7f0ec4c5c7b9d3841905eb SHA1 dea2e3d777733c75889ecd83073ebc5ca8a189f1 SHA256 cfa293fdd2cc2d852eabf8e0d8b5ad7e4dc3c55668873ef290cd1aff437054dd
 DIST freeverb3-2.5.19.tar.gz 6181842 RMD160 92151d353d2ff04bb89b1b590f5ba4c9f08aa67e SHA1 2a00f3a17fac913c6f1307d0ae80bb394721027e SHA256 d4d4c958b62c4dc8b0c5961340ef5df7df933eb194c6bbac45dbdb39db8270a9
 DIST freeverb3-2.5.20.tar.gz 6182195 RMD160 c1e1289c7f04c2d013391f7c3ed9672165d1692a SHA1 9e7f9c836182d3449ffbac63714dbff2a164d80f SHA256 8a9e7c94415ec592daccb9f494beea9e908684b30449837f2e1c3b7d85a04d48
+DIST freeverb3-2.5.21.tar.gz 6193499 RMD160 f439abc2ce3b2d4230f23ed58e5c1fd1fae92e73 SHA1 f3fed6d2fb3b69b2307bff4dd1013ab3392f42bc SHA256 400b3d79bca72d172d468da94b646c5309c2fe1075d49b40d0d864f476976023
 DIST freeverb3-2.5.6.tar.gz 6137361 RMD160 541c4231e5dc3baf6f7c7dd2bef4611d122a8361 SHA1 ee5cadff734374fdde7652aa8e3aedbaf7fb7cc7 SHA256 5ca572ecc53e02ffbb8da6cdaae9364c4a3afacb63f764f1f12b9cf800be663f
 DIST freeverb3-2.5.8.tar.gz 6136819 RMD160 df74bc8e20c016843c5d828192931d1e125714f6 SHA1 5a5e47e5eec08ebb26fcf5a5168fdd17e9c0d046 SHA256 ad489744caf0e83145eae7bc38fb88130bb86c35cf13dab7ffebc57369d31126
 EBUILD freeverb3-2.5.10.ebuild 1356 RMD160 83701989e27b1450863ee75137b6cefd22c6884c SHA1 0930e440c08149d668a7f15df23aa6e733d6ef5a SHA256 b94b14e5ccedcd4f6e9482dfbeea61dad04a2636ec979503447a91ae280b161e
@@ -26,14 +27,15 @@ EBUILD freeverb3-2.5.17.ebuild 1357 RMD160 ae7a6c8fe9f3c63976620f1dc1c355facdda7
 EBUILD freeverb3-2.5.18.ebuild 1500 RMD160 0ed3a5a5fd719c5c147d1e2894a8f2486ab76fe1 SHA1 bced45f2f35db28c1d370ad05a6c235378ed1a7c SHA256 decf6b1c28d214d25bf09f4d5ecc9ab005d4d2018f020924e852b80a8f42c27c
 EBUILD freeverb3-2.5.19.ebuild 1562 RMD160 0553a444ae7525a218788625762fe5ce00c64508 SHA1 9cd01aa6565e28349cdbe347b6a8589287d235a1 SHA256 7d87c4628f532652b04decebaca68b4610e312cd39c88d5d95cc83af14c6989b
 EBUILD freeverb3-2.5.20.ebuild 1562 RMD160 49eeab090748402e0614717aa62830e3333a7ba7 SHA1 00b15ef2579b3765b372f34a156b990b37b4d41a SHA256 42591de9454bd95caeef06a4f78b43c9a466954eb986e9e585825ab865df3de2
+EBUILD freeverb3-2.5.21.ebuild 1562 RMD160 1fad1691ecc3b2c0b72992685b49caf41bf0b5d5 SHA1 72d29633c77ea75077a981722cf816763437658a SHA256 5f873d56e3b2062a9bbc759fb4065dbe894ae4b704d26ec6b545d0ca860be0fc
 EBUILD freeverb3-2.5.6.ebuild 1355 RMD160 f19fef9f283f51383550a1c89471eee3d897497b SHA1 725405f00e0e28fcc95d8998b64b6a6db441daa8 SHA256 c569a7d57bd83a0ce9316da3738f9f67ee8c7fa1a13495afabbd42c4ce4e5924
 EBUILD freeverb3-2.5.8.ebuild 1355 RMD160 bbb6935d01575ea6038b55cab54f86e864c4499f SHA1 05be840845fd6d641412e1f734ded8be4ee03990 SHA256 f065d23937d3be595b18843d8c30cb17b66512b4ecf4b3e59e5bcd55b1317ede
-MISC ChangeLog 5720 RMD160 fa7a061845d95dea6f7c2ddeba686f79eee1e490 SHA1 b8a92def9a7882ff786c2fda4465ac8e3ad41a02 SHA256 0e69806b3f07385031c8b3cd0d14a9f2a6bc702c253af1448b3e141ff84b916c
+MISC ChangeLog 5864 RMD160 6691a7a4d0702624160fe51a8bff767d4dce2ad0 SHA1 63e39dc1b7cbed47d115fec3a8763dbea2371f37 SHA256 742f82cfdc973b4c1564ea2656930b28b9e457481ef58f3e98cacf6c72f257b7
 MISC metadata.xml 649 RMD160 fcd88a1a5e4c95f59646d4effd402813b495784a SHA1 3d8a47b4058fee08f7c913530ec2d1d095bb9c6d SHA256 e9a505b92928a87ea73c6cfa4a325493766d16a981115453407aea0fd306db96
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.18 (GNU/Linux)
 
-iEYEARECAAYFAk53QUgACgkQsAvGakAaFgCbgwCaA2vLRHC4/EZlWEZgfXcQpJz/
-X1IAoIXQ5mbrWWYL7ViR3UmgiGEhdRpL
-=yBG8
+iEYEARECAAYFAk6Ydi0ACgkQsAvGakAaFgDRqACgptgLl0LdU5cz2ItQS5r2miYg
+UpYAn2uNackxivuapNuzVcaqrMnVpDsi
+=Od9c
 -----END PGP SIGNATURE-----
