@@ -1,6 +1,11 @@
 # ChangeLog for media-libs/freeverb3
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/freeverb3/ChangeLog,v 1.30 2011/09/19 13:19:03 sping Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/freeverb3/ChangeLog,v 1.31 2011/10/14 17:49:23 sping Exp $
+
+*freeverb3-2.5.21 (14 Oct 2011)
+
+  14 Oct 2011; Sebastian Pipping <sping@gentoo.org> +freeverb3-2.5.21.ebuild:
+  Bump to 2.5.21, looks trivial
 
 *freeverb3-2.5.20 (19 Sep 2011)
 
